# cpp-playground

./: .clang-format  .gitignore  .gitmodules  README.md  _clean.bat  _clean.sh  _setup.bat  _setup.sh
Algorithm/: iota.cpp  min_max.cpp  partition.cpp  reduce.cpp  set_operations.cpp  transform.cpp  transform_reduce.cpp
Algorithm/CustomPredicates/: boost_impl.hpp  stdlib_impl.hpp  test.cpp
Algorithm/MinMax/: min_max.cpp
Algorithm/Numeric/: accumulate.cpp  (+1 more)
Algorithms/: Accumulate.cpp  Iota.cpp  MinMax.cpp  Partition.cpp  Reduce.cpp  Rotate.cpp  SetOperations.cpp  Sort.cpp  StableSort.cpp  Transform.cpp  TransformReduce.cpp
Allocators/: monotonic_buffer.cpp  null.cpp
Atomics/: CMakeLists.txt  LockfreeSharedPtr.cpp  SequentiallyConsistent.cpp  bench_atomic_vs_mutex.cpp  sequentially_consistent.cpp
Benchmarking/: CMakeLists.txt  sample.cpp
Boost.Asio/: composed1.cpp  post1.cpp  post2.cpp  post3.cpp  strand1.cpp  streambuf.cpp  timer1.cpp
Boost.Beast/: http_sync_client.cpp
Casting/: README.md
Casts/: DynamicFail.cpp
Challenges/: CountAdjacentEquals.cpp
ClassDefinition/: CMakeLists.txt  ref_qualified.cpp
Concepts/: HelloConcepts.cpp  hello_concepts.cpp
Concurrency/: Async.cpp  HarwareConcurrency.cpp  Monitor.cpp  MsPPL.cpp  NativeHandle.cpp  Thread.cpp  Unjoinable.cpp
Constructs/: Project.cpp
Containers/: Array.cpp  PropertyTree.cpp  Vector.cpp  _clean.bat  array.cpp  bitset.cpp  deque.cpp  map.cpp  property_tree.cpp  set.cpp  vector.cpp
CoreLangNotes/: Classes.md  Concurrency.md  Error.md  Memory.md  Namespace.md  README.md  Stdlib.md  Types.md
Coroutines/: yield_perf.cpp
CppTools/: ClangTools.cpp
DateTime/: Gregorian.cpp
Exceptions/: basics.cpp  guarantees.cpp
Fibonacci/: Closed.cpp  Template.cpp
Functional/: Bind.cpp  BindVsLambda.cpp  bind.cpp  bind_vs_lambda.cpp  for_each.cpp  negate.cpp  project.cpp  sequence1.cpp  sort1.cpp
GSL/: Span.cpp
GoogleTest/: hello.cpp
Iterators/: Advance.cpp  BidirectionalIterator.cpp  ForwardIterator.cpp  InputIterator.cpp  InsertIterator.cpp  MoveAdapter.cpp  MutableIterator.cpp  NextPrev.cpp  RandomAccessIterator.cpp  Reverse.cpp  dev_null.cpp
Lambdas/: Generic.cpp  HigherOrder.cpp  IILE.cpp  PartialApplication.cpp  Puzzle.cpp  Variadic.cpp
MSVC/: DisplayType.cpp  nodiscard1.cpp  nodiscard2.cpp
Memory/: new.cpp
Profiling/: VectorVsDeque.cpp
Ranges/: Composability.cpp  Convenience.cpp  SumSquaresThrough.cpp  composability.cpp  convenience.cpp
STL/: EmplaceBack.cpp  PrettyPrinter.cpp
SmartPointers/: UniquePtr.cpp  scoped_ptr.cpp  shared_from_this.cpp  unique_ptr.cpp  weak_ptr.cpp
Streams/: basic_istream.cpp  basic_ostream.cpp  coupling1.cpp  manipulators.cpp  overload_extractor.cpp  overload_inserter.cpp  streambuf_iterators.cpp  unformatted_input.cpp  unformatted_output.cpp
Strings/: Construction.cpp  Elements.cpp  Manipulation.cpp  Search.cpp  construction.cpp  elements.cpp  manipulation.cpp  search.cpp
TMP/: Factorial.cpp  Fibonacci.cpp  Sort.cpp  ValidForType.cpp
TextFormatting/: FmtHelloWorld.cpp
Timing/: Timer.cpp  Timing.cpp
TypeTraits/: IsPointer.cpp  IsSame.cpp  NumberPrinter.cpp  is_same.cpp  number_printer.cpp
Utilities/: Optional.cpp  RefWrapper.cpp
VariadicTemplates/: HelloVariadicTemplates.cpp  README.md  build.bat
_CMake/: warnings.cmake
algorithm/numeric/: CMakeLists.txt  accumulate.cpp  iota.cpp  reduce.cpp  transform_reduce.cpp
allocators/: CMakeLists.txt  bench_list_allocators.cpp  monotonic_buffer.cpp  null.cpp
atomics/: CMakeLists.txt  bench_sharing.cpp  lockfree_shared_ptr.cpp
atomics/performance/: CMakeLists.txt  bench_sharing.cpp
benchmarking/: CMakeLists.txt  sample.cpp
boost.asio/: composed1.cpp  post1.cpp  post2.cpp  strand1.cpp  streambuf.cpp  threadpool.cpp
casts/: dynamic_fail.cpp
concepts/: CMakeLists.txt  hello.cpp  hello_concepts.cpp  overload.cpp  require1.cpp
concurrency/threadpool/basic/: CMakeLists.txt  bench.cpp  test.cpp  thread_pool.hpp
containers/: CMakeLists.txt  bitset.cpp  heap.cpp  list.cpp  set.cpp  unordered_map.cpp
containers/bvector/: BitVector.hpp  Makefile  main.cpp
containers/performance/: CMakeLists.txt  bench_hashtable_index.cpp  bench_list_deque.cpp  bench_lookup.cpp  bench_vector_deque.cpp  hashtable_index.cpp  vector_vs_deque.cpp
cpp-tools/: README.md  test.cpp
exceptions/: CMakeLists.txt  basics.cpp  guarantees.cpp
functional/: for_each.cpp  negate.cpp  project.cpp  sort1.cpp  with.cpp
iterators/: Advance.cpp  InputIterator.cpp  InsertIterator.cpp  MoveAdapter.cpp  MutableIterator.cpp  RandomAccessIterator.cpp  Reverse.cpp  next_prev.cpp  output_transform.cpp
lambdas/: Inheritance.cpp
lockfree/spsc-queue/: CMakeLists.txt  bench.cpp  spsc_queue.hpp  test.cpp
locks/rw-bench/: CMakeLists.txt  bench_latency.cpp  bench_throughput.cpp  lock_helpers.hpp  plot_latency.py  plot_throughput.py  requirements.txt  results.txt
locks/spinlock/: CMakeLists.txt  bench.cpp  bench_latency.cpp  fast_spinlock.hpp  guard.hpp  naive_spinlock.hpp  tatas_spinlock.hpp  test.cpp  ticket_spinlock.hpp  yielding_spinlock.hpp
locks/spinlock/lib/: naive_spinlock.hpp
memory/: new.cpp
misc/: CMakeLists.txt  CrashCourse.cpp  crash_course.cpp  thread_local.cpp
misc/advent2020/day15/: CMakeLists.txt  puzzle1.cpp  puzzle2.cpp
msvc/: display_type.cpp
object-model/: CMakeLists.txt  forwarding1.cpp  poly1.cpp  poly2.cpp
object-orientation/: CMakeLists.txt  inheritance.cpp
performance/matrix-vector-product/: CMakeLists.txt  bench_matrix_vector_prod.cpp  matrix_vector_prod_vectorized.hpp
ranges/: CMakeLists.txt  composability.cpp  it_works.cpp
smart-pointers/: shared_from_this.cpp  unique_ptr.cpp  weak_ptr.cpp
span/: CMakeLists.txt  span.cpp
streams/: basic_ostream.cpp  streambuf_iterators.cpp  unformatted_input.cpp
strings/: construction.cpp  manipulation.cpp
type-deduction/: CMakeLists.txt  decltype1.cpp  decltype2.cpp
type-traits/: is_pointer.cpp
utilities/optional/: CMakeLists.txt  optional1.cpp
utilities/variant/: CMakeLists.txt  Variant.cpp  Visit.cpp  variant1.cpp  variant2.cpp
(+172 files in other folders)
